[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/menus/options/video/video_options_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/options/video/VideoOptionContainer.tscn" type="PackedScene" id=3]

[node name="VideoOptionsMenu" type="VBoxContainer" groups=[
"options",
]]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Label" parent="."]
margin_top = 22.0
margin_right = 320.0
margin_bottom = 36.0
text = "Video"
align = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 40.0
margin_right = 320.0
margin_bottom = 44.0

[node name="VSync" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 320.0
margin_bottom = 63.0
options = [ "Enabled", "Disabled" ]
default_option = "Enabled"

[node name="Label" parent="VSync" index="0"]
margin_top = 1.0
margin_bottom = 14.0
text = "Vsync"

[node name="CycleOptionsButton" parent="VSync" index="1"]
margin_bottom = 15.0
focus_neighbour_top = NodePath("../../Back")
focus_neighbour_bottom = NodePath("../../WindowMode/CycleOptionsButton")

[node name="WindowMode" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 67.0
margin_right = 320.0
margin_bottom = 82.0
options = [ "Windowed", "Fullscreen" ]
default_option = "Fullscreen"

[node name="Label" parent="WindowMode" index="0"]
margin_top = 1.0
margin_bottom = 14.0
text = "Window Mode"

[node name="CycleOptionsButton" parent="WindowMode" index="1"]
margin_bottom = 15.0
focus_neighbour_top = NodePath("../../VSync/CycleOptionsButton")
focus_neighbour_bottom = NodePath("../../FpsCap/CycleOptionsButton")

[node name="FpsCap" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 86.0
margin_right = 320.0
margin_bottom = 101.0
options = [ "None", "30", "60" ]
default_option = "60"

[node name="Label" parent="FpsCap" index="0"]
margin_top = 1.0
margin_bottom = 14.0
text = "FPS Cap"

[node name="CycleOptionsButton" parent="FpsCap" index="1"]
margin_bottom = 15.0
focus_neighbour_top = NodePath("../../WindowMode/CycleOptionsButton")
focus_neighbour_bottom = NodePath("../../ResetToDefaults")

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 105.0
margin_right = 320.0
margin_bottom = 109.0

[node name="ResetToDefaults" type="Button" parent="."]
margin_top = 113.0
margin_right = 320.0
margin_bottom = 133.0
focus_neighbour_top = NodePath("../FpsCap/CycleOptionsButton")
focus_neighbour_bottom = NodePath("../Back")
text = "Reset To Defaults"

[node name="Back" type="Button" parent="."]
margin_top = 137.0
margin_right = 320.0
margin_bottom = 157.0
focus_neighbour_top = NodePath("../ResetToDefaults")
focus_neighbour_bottom = NodePath("../VSync/CycleOptionsButton")
text = "Back"

[editable path="VSync"]
[editable path="WindowMode"]
[editable path="FpsCap"]
